# gpress

./: .gitignore  README.md  pyproject.toml
gpress/: apps.py
gpress/admin/: admin.py  inlines.py
gpress/api/: filters.py  mutation.py  paginations.py  permissions.py  query.py  schema.py  serializers.py  subscription.py  subscriptions.py  urls.py  viewsets.py
gpress/models/: models.py
server/nginx/: location.gpress.conf
server/nginx/gpress/: location.gpress.conf  location.root.conf  logs.conf  server.conf  upstream.gpress.conf
server/wordpress/: wp-config.php
tests/: test_gpress.py
ui/: .env  .env.development  README.md  package-lock.json  package.json
ui/src/: App.js  settings.ts
ui/src/App/: index.tsx
ui/src/Layouts/: index.tsx
ui/src/Layouts/Header/: index.tsx
ui/src/Layouts/Main/: index.tsx
ui/src/graphql/: codegen.yml  index.tsx  schema.graphql
ui/src/graphql/client/: index.ts
ui/src/graphql/queries/: latestPost.graphql  postSet.graphql
ui/src/layout/Header/: index.tsx
ui/src/layout/Main/: index.tsx
ui/src/pages/: index.tsx
ui/src/pages/Post/: index.tsx
ui/src/pages/Post/Detail/: index.tsx
ui/src/pages/Post/List/: index.tsx
ui/src/pages/Top/: index.tsx
web/: gunicorn.py
web/api/: consumers.py  schema.py  urls.py  views.py
web/api/templates/api/: index.html
web/app/: local_settings.dist.py  loggings.py  middleware.py  routing.py  settings.py  urls.py
web/app/databases/: __init__.py  routers.py
web/frontend/: urls.py  views.py
