[tool.poetry]
name = "gpress"
version = "0.1.0"
description = ""
authors = ["hdknr <gmail@hdknr.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
mysqlclient = "^1.4.6"
phpserialize = "^1.3"
ipython = "^7.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
